<resources>
    <string name="app_name">Tutr</string>

    <!-- Strings related to Registration -->
    <string name="title_activity_registration">Registration</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Sign Up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_dup_email">This email is in use</string>
    <string name="error_length_password">The password has to be 8 to 16 characters long</string>
    <string name="error_CapCase">The password must have a capital letter</string>
    <string name="error_lowerCase">The password must have a lower case letter</string>

    <string name="prompt_old_password">Enter Old Password (Required)</string>
    <string name="prompt_new_password">Enter New Password</string>
    <string name="request_new_password">Enter Your Email</string>
    <string name="prompt_confirm_new_password">Confirm New Password</string>
    <string name="prompt_enter_new_name">Enter New Name</string>

    <string name="error_invalid_name">Invalid name entered</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_name_numbers">Name can\'t have numbers</string>
    <string name="error_field_not_matching">Passwords must match.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Login -->

    <string name="title_activity_login">Login</string>
    <string name="action_sign_in">Sign in</string>
    <string name="new_user_test">new user? Register <u>here</u></string>
    <string name="name">Name</string>

    <string name="here"><u>here</u></string>
    <string name="title_activity_homepage">HomepageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_login">Sign In</string>
    <string name="title_activity_acc_set">Edit Account Settings</string>

    <!-- Strings related to Tutor Profile -->
    <string name="title_activity_view_tutor">Tutor Name</string>

    <!-- Strings related to Main Activity -->
    <string name="title_activity_main">Search</string>

    <string name="nav_account_button">My Account</string>
    <string name="nav_profile_button">My Profile</string>
    <string name="nav_favorite_button">My Favorites</string>
    <string name="nav_logout_button">Logout</string>
    <string name="hourly_rate_text">Hourly Rate:\u0020</string>
    <string name="rating_text">Rating:\u0020</string>

    <!-- Strings related to Favorite Activity -->
    <string name="title_activity_favorites">Favorites</string>

    <!-- Strings related to Settings -->

    <!-- Example General account_settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="save">SAVE</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example account_settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>


    <string name="eProfile">Edit Profile</string>

    <!-- Example account_settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dialog_deleteProfile">Delete your profile picture?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
