<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These account_settings headers are only used on tablets. -->

    <header
        android:fragment="com.example.android.tutr.AccSetActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.example.android.tutr.AccSetActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.example.android.tutr.AccSetActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
