    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/aluminium"
        tools:context="com.example.android.tutr.LoginActivity">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:id="@+id/imageView"
            android:src="@mipmap/ic_launcher"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


            <AutoCompleteTextView
                android:id="@+id/email_login"
                android:layout_width="289dp"
                android:layout_height="@dimen/height"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@color/peacockBlue"
                android:textColor="#ffffff"
                android:textColorHighlight="#ffffff"
                android:textColorHint="#ffffff"
                android:textIsSelectable="true"
                android:textAlignment="center"
                android:layout_marginTop="45dp"
                android:layout_above="@+id/password_login">

            </AutoCompleteTextView>



            <EditText
                android:id="@+id/password_login"
                android:layout_width="289dp"
                android:layout_height="@dimen/height"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:background="@color/peacockBlue"
                android:textColorHint="#ffffff"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:layout_alignBaseline="@+id/email_login_button"
                android:layout_alignBottom="@+id/email_login_button"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColorHighlight="#ffffff"
                android:textColor="#ffffff" />
        <Button
            android:id="@+id/email_login_button"
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:allowUndo="true"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/new_user_test"
            android:id="@+id/new_user_text"
            android:textColor="#000000" />
    </LinearLayout>
